--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,5 +1,10 @@
 jdk:
   - openjdk11
+
 before_install:
   - yes | sdkmanager "cmake;3.18.1"
   - yes | sdkmanager "ndk;27.2.12479018"
+  - curl -L https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-linux.tar.gz -o premake.tar.gz
+  - tar -xzf premake.tar.gz
+  - chmod +x premake5
+  - sudo mv premake5 /usr/local/bin/premake5
