--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,8 +2,12 @@ jdk:
   - openjdk11
 
 before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y uuid-dev
+
   - yes | sdkmanager "cmake;3.18.1"
   - yes | sdkmanager "ndk;27.2.12479018"
+
   - curl -L https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-linux.tar.gz -o premake.tar.gz
   - tar -xzf premake.tar.gz
   - chmod +x premake5
